# bmp390-shuttle

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bmp390/: CMakeLists.txt  Kconfig  bmp3.c  bmp3.h  bmp390.c  bmp390.h  bmp390_trigger.c
dts/bindings/: bosch,bmp390-i2c.yaml  bosch,bmp390-spi.yaml  bosch,bmp390.yaml
inc/: worx_task_config.h  worx_types.h
src/: main.c
src/sensors/: sensors.c  sensors.h
